--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
-  "name": "mastoclone",
-  "version": "0.0.2",
-  "description": "Clone of Mastodon",
-  "main": "app.js",
-  "scripts": {
-    "test": "test",
-    "dev": "http-server -p 8000"
+  "name": "my-app",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-scripts": "2.0.4"
   },
-  "author": "Daniel Sockwell & Marc Tiosejo",
-  "license": "GPL-3.0-or-later",
-  "devDependencies": {
-    "http-server": "^0.11.1"
-  }
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
